# libdict

./: CMakeLists.txt  GNUmakefile  README.md  anagram.c  benchmark.c  demo.c  unit_tests.c  util.h  vg
.github/workflows/: package.yml  pages.yml  release.yml  test.yml
html/: annotated.html  classes.html  dict_8c.html  dict_8c__incl.map  dict_8c__incl.md5  dict_8c_source.html  dict_8h.html  dict_8h__dep__incl.map  dict_8h__dep__incl.md5  dict_8h__incl.map  dict_8h__incl.md5  dict_8h_source.html  dict__private_8h.html  dict__private_8h__dep__incl.map  dict__private_8h__dep__incl.md5  dict__private_8h__incl.map  dict__private_8h__incl.md5  dict__private_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_func_h.html  globals_func_p.html  globals_func_r.html  globals_func_s.html  globals_func_t.html  (+1146 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_10.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  (+46 more)
include/: dict.h  hashtable.h  hashtable2.h  hb_tree.h  pr_tree.h  rb_tree.h  skiplist.h  sp_tree.h  tr_tree.h  wb_tree.h
src/: dict.c  dict_private.h  hashtable.c  hashtable2.c  hashtable_common.c  hb_tree.c  pr_tree.c  rb_tree.c  skiplist.c  sp_tree.c  tr_tree.c  tree_common.c  tree_common.h  wb_tree.c
xml/: Doxyfile.xml  dict_8c.xml  dict_8h.xml  dict__private_8h.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  hashtable2_8c.xml  hashtable2_8h.xml  hashtable_8c.xml  hashtable_8h.xml  hashtable__common_8c.xml  hashtable__common_8h.xml  hb__tree_8c.xml  hb__tree_8h.xml  index.xml  pr__tree_8c.xml  pr__tree_8h.xml  rb__tree_8c.xml  rb__tree_8h.xml  skiplist_8c.xml  skiplist_8h.xml  sp__tree_8c.xml  sp__tree_8h.xml  structdict.xml  structdict__insert__result.xml  structdict__itor.xml  structdict__remove__result.xml  structdict__vtable.xml  structhash__node.xml  structhashtable.xml  structhashtable2.xml  structhashtable2__itor.xml  structhashtable__itor.xml  structhb__itor.xml  structhb__node.xml  structhb__tree.xml  structitor__vtable.xml  structpr__itor.xml  structpr__node.xml  structpr__tree.xml  (+26 more)
